style and command parser refactoring

--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  align-items: center;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -37,14 +38,27 @@ h1 {
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
+#controls{
+  display:flex;
+  gap: 1rem;
+  align-items: start;
+}
+
+#captionator {
+  display: flex;
+  align-items:center;
+  text-align: center;
+  justify-content: center;
+  flex-direction: row;
+}
 
 .card {
   padding: 2em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 2rem;
 }
 
 
@@ -58,10 +72,13 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-bottom: 1rem;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -76,7 +93,7 @@ button:focus-visible {
   -moz-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
-  right: 11px;
+  right: 50px;
   top: 18px;
   padding: 0 0 2px;
   border-bottom: 1px solid #999;
@@ -85,9 +102,7 @@ button:focus-visible {
 }
 .selectdiv {
   position: relative;
-  float: left;
   min-width: 200px;
-  margin: 50px 33%;
 }
 
 .selectdiv select {
@@ -97,7 +112,6 @@ button:focus-visible {
   width: 100%;
   max-width: 320px;
   height: 50px;
-  float: right;
   margin: 5px 0px;
   padding: 0px 24px;
   font-size: 16px;
